--- a/wiki/de/Macro_FCSpring_Helix_Variable.html
+++ b/wiki/de/Macro_FCSpring_Helix_Variable.html
@@ -185,18 +185,16 @@ webbrowser.open("https://gist.githubusercontent.com/mario52a/68c81c32a0727a693d3
 <p><span id="Coil_special_dimension"></span>
 </p>
 <h4><span class="mw-headline" id="Spulen-Sonderabmessung">Spulen-Sonderabmessung</span></h4>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<ul><li><span style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #989898; border-radius: 0.2em; padding: 2px 5px 3px 5px; font-weight:normal;">Num: 2  <span typeof="mw:File"><a href="../index.php?title=SpinBox.svg&amp;filetimestamp=20200327215243&amp;.html" class="mw-file-description"><img src="../File/SpinBox.svg" decoding="async" width="17" height="17" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span><span></span></span> <b>Numbering of coil</b>&nbsp;: Numbering of coil to modify. (Default&nbsp;: none)</li>
-<li><span style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #989898; border-radius: 0.2em; padding: 0px 10px 1px 10px; font-weight:normal;"><span typeof="mw:File"><a href="../index.php?title=CheckBoxFalse.svg&amp;filetimestamp=20200323161434&amp;.html" class="mw-file-description"><img src="../File/CheckBoxFalse.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Smoothing<span></span></span> <b>Smoothing</b> This checkBox discover one spinBox for determine the grade of smoothing the maximum value is the precision value -1 (this option is still at the prototype stage and the result can be satisfying or completely wrong)</li>
-<li><span style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #989898; border-radius: 0.2em; padding: 2px 5px 3px 5px; font-weight:normal;">0,000 mm  <span typeof="mw:File"><a href="../index.php?title=SpinBox.svg&amp;filetimestamp=20200327215243&amp;.html" class="mw-file-description"><img src="../File/SpinBox.svg" decoding="async" width="17" height="17" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span><span></span></span> <b>Pitch of coil</b>&nbsp;: Pitch of coil to modify. (Default&nbsp;: none)</li>
-<li><span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">15.0 mm</span>&nbsp;: If the button is pressed the value of the "Pitch of string" is affected of the "Pitch of coil" (This value is automatically aligned of the value Pitch of string)</li>
-<li><span style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #989898; border-radius: 0.2em; padding: 2px 5px 3px 5px; font-weight:normal;">0,000 mm  <span typeof="mw:File"><a href="../index.php?title=SpinBox.svg&amp;filetimestamp=20200327215243&amp;.html" class="mw-file-description"><img src="../File/SpinBox.svg" decoding="async" width="17" height="17" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span><span></span></span> <b>Radius of coil</b>&nbsp;: Radius of coil to modify.  (Default&nbsp;: none)</li>
-<li><span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">20.0 mm</span>&nbsp;: If the button is pressed the value of the "Radius of string" is affected of the "Radius of coil" (This value is automatically aligned of the value Radius of string)</li>
-<li><span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="../index.php?title=FCSpring_Helix_Variable_Icon_01.png&amp;filetimestamp=20160904162012&amp;.html" class="mw-file-description"><img src="../File/FCSpring_Helix_Variable_Icon_01.png" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="32" data-file-height="32"></a></span> Accept the value modified</span>&nbsp;: Button to accept the modification after select the numbering of coil and modify the pitch of coil.</li>
-<li><b>Text edit</b>&nbsp;: This window displayed all coil modified.</li>
-<li><span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">Clear</span>&nbsp;: Clean the text editor</li>
-<li><span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">Zoom</span>&nbsp;: Button "Zoom" enlarge the text-edit window</li></ul>
-</div>
+<ul><li><span style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #989898; border-radius: 0.2em; padding: 2px 5px 3px 5px; font-weight:normal;">Num: 2  <span typeof="mw:File"><a href="../index.php?title=SpinBox.svg&amp;filetimestamp=20200327215243&amp;.html" class="mw-file-description"><img src="../File/SpinBox.svg" decoding="async" width="17" height="17" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span><span></span></span> <b>Numbering of coil</b>&nbsp;: Nummerierung der zu &auml;ndernden Spule. (Standard: keine)</li>
+<li><span style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #989898; border-radius: 0.2em; padding: 0px 10px 1px 10px; font-weight:normal;"><span typeof="mw:File"><a href="../index.php?title=CheckBoxFalse.svg&amp;filetimestamp=20200323161434&amp;.html" class="mw-file-description"><img src="../File/CheckBoxFalse.svg" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Smoothing<span></span></span> <b>Smoothing</b> Dieses Kontrollk&auml;stchen entdeckt ein Drehfeld zur Bestimmung des Gl&auml;ttungsgrades. Der Maximalwert ist der Pr&auml;zisionswert -1 (diese Option befindet sich noch im Prototypenstadium und das Ergebnis kann zufriedenstellend oder v&ouml;llig falsch sein).</li>
+<li><span style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #989898; border-radius: 0.2em; padding: 2px 5px 3px 5px; font-weight:normal;">0,000 mm  <span typeof="mw:File"><a href="../index.php?title=SpinBox.svg&amp;filetimestamp=20200327215243&amp;.html" class="mw-file-description"><img src="../File/SpinBox.svg" decoding="async" width="17" height="17" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span><span></span></span> <b>Pitch of coil</b>&nbsp;: Spulenabstand zum &Auml;ndern. (Standard: keine)</li>
+<li><span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">15.0 mm</span>&nbsp;: Wenn die Taste gedr&uuml;ckt wird, wird der Wert &bdquo;Tonh&ouml;he der Saite&ldquo; von der &bdquo;Tonh&ouml;he der Spule&ldquo; beeinflusst (dieser Wert wird automatisch an den Wert &bdquo;Tonh&ouml;he der Saite&ldquo; angepasst).</li>
+<li><span style="background: #f9f9f9; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 1px solid #989898; border-radius: 0.2em; padding: 2px 5px 3px 5px; font-weight:normal;">0,000 mm  <span typeof="mw:File"><a href="../index.php?title=SpinBox.svg&amp;filetimestamp=20200327215243&amp;.html" class="mw-file-description"><img src="../File/SpinBox.svg" decoding="async" width="17" height="17" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span><span></span></span> <b>Radius of coil</b>&nbsp;: Radius der zu modifizierenden Spule.  (Standard: keine)</li>
+<li><span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">20.0 mm</span>&nbsp;: Wenn die Schaltfl&auml;che gedr&uuml;ckt wird, wird der Wert &bdquo;Radius der Schnur&ldquo; vom Wert &bdquo;Radius der Spule&ldquo; beeinflusst (dieser Wert wird automatisch an den Wert &bdquo;Radius der Schnur&ldquo; angepasst).</li>
+<li><span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;"><span typeof="mw:File"><a href="../index.php?title=FCSpring_Helix_Variable_Icon_01.png&amp;filetimestamp=20160904162012&amp;.html" class="mw-file-description"><img src="../File/FCSpring_Helix_Variable_Icon_01.png" decoding="async" width="16" height="16" class="mw-file-element" data-file-width="32" data-file-height="32"></a></span> Den ge&auml;nderten Wert akzeptieren</span>&nbsp;: Schaltfl&auml;che zum Akzeptieren der &Auml;nderung nach Auswahl der Spulenanzahl und &Auml;nderung des Spulenabstands.</li>
+<li><b>Text edit</b>&nbsp;: In diesem Fenster wurden alle modifizierten Spulen angezeigt.</li>
+<li><span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">Clear</span>&nbsp;: Den Texteditor bereinigen</li>
+<li><span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">Zoom</span>&nbsp;: Schaltfl&auml;che &bdquo;Zoom&ldquo; zum Vergr&ouml;&szlig;ern des Textbearbeitungsfensters</li></ul>
 <p><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Macro_FCSpring_Helix_Variable_04.png&amp;filetimestamp=20200419153725&amp;.html" class="mw-file-description"><img src="../File/Macro_FCSpring_Helix_Variable_04.png" decoding="async" width="428" height="201" class="mw-file-element" data-file-width="428" data-file-height="201"></a></span>
 </p>
 <div style="clear:both"></div>
@@ -501,15 +499,15 @@ Werkzeugleisten-Symbol </p><figure class="mw-default-size mw-halign-left" typeof
 <div style="clear:both"></div>
 <!-- 
 NewPP limit report
-Cached time: 20260116044604
+Cached time: 20260116045758
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.221 seconds
-Real time usage: 0.347 seconds
-Preprocessor visited node count: 947/1000000
-Post&#8208;expand include size: 24590/2097152 bytes
-Template argument size: 4652/2097152 bytes
+CPU time usage: 0.196 seconds
+Real time usage: 0.264 seconds
+Preprocessor visited node count: 946/1000000
+Post&#8208;expand include size: 24597/2097152 bytes
+Template argument size: 4659/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 6/100
 Unstrip recursion depth: 0/20
@@ -517,19 +515,19 @@ Unstrip post&#8208;expand size: 28573/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  170.448      1 -total
-  3.68%    6.270      2 Template:RadioButton
-  2.96%    5.051      1 Template:Macro/de
-  2.54%    4.323     25 Template:Button
-  2.41%    4.111      6 Template:Code
-  1.93%    3.295      8 Template:CheckBox
-  1.83%    3.113     12 Template:SpinBox
-  1.78%    3.033      1 Template:Codeextralink
-  1.57%    2.673      1 Template:KEY
-  1.18%    2.007     14 Template:Clear
+100.00%  115.686      1 -total
+  3.64%    4.214      1 Template:Codeextralink
+  2.89%    3.343      1 Template:Macro/de
+  2.82%    3.264     12 Template:SpinBox
+  2.79%    3.222      6 Template:Code
+  2.60%    3.011      2 Template:RadioButton
+  2.54%    2.939      8 Template:CheckBox
+  2.16%    2.505     25 Template:Button
+  1.73%    1.998      1 Template:KEY
+  1.72%    1.994      1 Template:Caption
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:391791-0!canonical and timestamp 20260116044603 and revision id 1739020. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:391791-0!canonical and timestamp 20260116045757 and revision id 1739025. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
