--- a/wiki/de/Macro_Half-Hull_Model.html
+++ b/wiki/de/Macro_Half-Hull_Model.html
@@ -1,5 +1,5 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">Macro Half-Hull Model/de</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="de" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-Macro+Half-Hull+Model&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="de" dir="ltr">Deutsch</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="de" dir="ltr">Deutsch</span></li>
 <li><a href="../Macro_Half-Hull_Model.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="Macro Half-Hull Model (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../fr/Macro_Half-Hull_Model.html" class="mw-pt-progress mw-pt-progress--complete" title="Macro Half-Hull Model (100% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
 <li><a href="../it/Macro_Half-Hull_Model.html" class="mw-pt-progress mw-pt-progress--med" title="Macro Modello di mezzo scafo (66% translated)" lang="it" dir="ltr">italiano</a></li>
@@ -262,25 +262,23 @@ Vielleicht ist es mit sieben Skizzen (eine in der YZ-Ebene, eine in der XY-Ebene
 </p><p><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Macro_Half-Hull_ModelScreenSnapshot2.jpg&amp;filetimestamp=20150129190008&amp;.html" class="mw-file-description"><img src="../File/Macro_Half-Hull_ModelScreenSnapshot2.jpg" decoding="async" width="500" height="361" class="mw-file-element" data-file-width="500" data-file-height="361"></a></span>
 </p><p>Die Auswahlm&ouml;glichkeiten im GUI-Fenster sind:
 </p>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<ul><li>Starboard half-hull: checking this will cause the macro to produce a starboard half-hull model
-<ul><li>Mounting plaque: if checked the macro will mount the half-hull on a plaque</li>
-<li>Allow space for keel: if checked will cause the half hull to be mounted higher on the plaque than the centre position, this is so a separately generated keel could be placed below the hull</li></ul></li>
-<li>Port half-hull: checking this will cause the macro to produce a port half-hull model
-<ul><li>Mounting plaque: if checked the macro will mount the half-hull on a plaque</li>
-<li>Allow space for keel: if checked will cause the half hull to be mounted higher on the plaque than the centre position, this is so a separately generated keel could be placed below the hull</li></ul></li>
-<li>Complete hull: checking this will cause the macro to produce a complete model
-<ul><li>Bottle for complete hull: if checked the macro will place the complete hull inside a transparent bottle (complete with cork)</li>
-<li>Allow space for keel: if checked will cause the half hull to be positioned higher in the bottle than the centre position, this is so a separately generated keel could be placed below the hull</li></ul></li>
-<li>Bulkheads for flush deck: checking this will cause the macro to produce bulkheads whose tops are level with the top of the hull, bulkheads will not be generated for the most forward 2 cross-sections or the aft-most 2 cross-sections</li>
-<li>Bulkheads for coachhouse: checking this will cause the macro to produce bulkheads whose tops are possibly above the top of the hull.
-<ul><li>Bulkheads to skip at bow determines how many cross-sections will be left without a bulkhead at the bow</li>
-<li>Bulkheads to skip at stern determines how many cross-sections will be left without a bulkhead at the stern</li></ul></li>
-<li>The dimensions of the top of the bulkheads will be configured as per the following diagram:<br><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Macro_Half-Hull_ModelUi1.jpg&amp;filetimestamp=20150125150428&amp;.html" class="mw-file-description"><img src="../File/Macro_Half-Hull_ModelUi1.jpg" decoding="async" width="500" height="336" class="mw-file-element" data-file-width="500" data-file-height="336"></a></span></li>
-<li>Cancel button: the execution is halted and the window closes</li>
-<li>Re-Use Last File button: the execution uses the data file AND SETTINGS from the the last run, any changes to settings are ignored</li>
-<li>Select File button: the standard Open File window is opened where the user can either select a file or Cancel and exit</li></ul>
-</div>
+<ul><li>Starboard half-hull: Wenn diese Option aktiviert wird, erzeugt das Makro ein Modell der Steuerbord-Halbschale.
+<ul><li>Mounting plaque: Wenn diese Option aktiviert ist, montiert das Makro den Halbrumpf auf einer Platte.</li>
+<li>Allow space for keel: Wenn diese Option aktiviert ist, wird der halbe Rumpf h&ouml;her auf der Platte montiert als in der Mitte, damit ein separat erstellter Kiel unterhalb des Rumpfes platziert werden kann.</li></ul></li>
+<li>Port half-hull: Wenn diese Option aktiviert ist, erzeugt das Makro ein Port-Halbschalenmodell.
+<ul><li>Mounting plaque: Wenn diese Option aktiviert ist, montiert das Makro den Halbrumpf auf einer Platte.</li>
+<li>Allow space for keel: Wenn diese Option aktiviert ist, wird der halbe Rumpf h&ouml;her auf der Platte montiert als in der Mitte, damit ein separat erstellter Kiel unterhalb des Rumpfes platziert werden kann.</li></ul></li>
+<li>Complete hull: Wenn diese Option aktiviert ist, erstellt das Makro ein vollst&auml;ndiges Modell.
+<ul><li>Bottle for complete hull: Wenn diese Option aktiviert ist, platziert das Makro den gesamten Rumpf in einer transparenten Flasche (komplett mit Korken).</li>
+<li>Allow space for keel: Wenn diese Option aktiviert ist, wird der halbe Rumpf h&ouml;her in der Flasche positioniert als in der Mitte, damit ein separat erstellter Kiel unterhalb des Rumpfes platziert werden kann.</li></ul></li>
+<li>Bulkheads for flush deck: Wenn diese Option aktiviert ist, erzeugt das Makro Schotten, deren Oberkante mit der Oberkante des Rumpfes b&uuml;ndig ist. F&uuml;r die beiden vordersten Querschnitte und die beiden hintersten Querschnitte werden keine Schotten erzeugt.</li>
+<li>Bulkheads for coachhouse: Wenn diese Option aktiviert ist, erzeugt das Makro Schotten, deren Oberkante m&ouml;glicherweise &uuml;ber der Oberkante des Rumpfes liegt.
+<ul><li>Die zu &uuml;berspringenden Schotten am Bug bestimmen, wie viele Querschnitte ohne Schott am Bug verbleiben.</li>
+<li>Die Anzahl der zu &uuml;berspringenden Schotten am Heck bestimmt, wie viele Querschnitte ohne Schott am Heck verbleiben.</li></ul></li>
+<li>Die Abmessungen der Oberseite der Schotten werden gem&auml;&szlig; der folgenden Abbildung konfiguriert:<br><span class="mw-default-size" typeof="mw:File"><a href="../index.php?title=Macro_Half-Hull_ModelUi1.jpg&amp;filetimestamp=20150125150428&amp;.html" class="mw-file-description"><img src="../File/Macro_Half-Hull_ModelUi1.jpg" decoding="async" width="500" height="336" class="mw-file-element" data-file-width="500" data-file-height="336"></a></span></li>
+<li>Schaltfl&auml;che Cancel (Abbrechen): Die Ausf&uuml;hrung wird angehalten und das Fenster geschlossen.</li>
+<li>Schaltfl&auml;che Re-Use Last File (Letzte Datei wiederverwenden): Die Ausf&uuml;hrung verwendet die Datendatei UND EINSTELLUNGEN aus dem letzten Durchlauf, alle &Auml;nderungen an den Einstellungen werden ignoriert.</li>
+<li>Schaltfl&auml;che Select File (Datei ausw&auml;hlen): Das Standardfenster Datei &ouml;ffnen wird ge&ouml;ffnet, in dem der Benutzer entweder eine Datei ausw&auml;hlen oder auf Abbrechen klicken und das Fenster schlie&szlig;en kann.</li></ul>
 <p>Wenn das Makro ausgef&uuml;hrt wird, nimmt es Konfigurationsdaten vom Benutzer entgegen und liest dann Sketcher-Skizzen in der ausgew&auml;hlten Eingabedatei.
 </p><p><b>Hinweis</b>: W&auml;hrend das Makro die Skizzen durchl&auml;uft, druckt es alle Ausnahmen sowie einige Meilensteine in der Berichtsansicht aus. Wenn man unerwartete Ergebnisse erh&auml;lt oder Teile fehlen, sollte man wahrscheinlich zuerst hier nachsehen.
 </p><p><span id="Options"></span>
@@ -500,29 +498,29 @@ Vielleicht ist es mit sieben Skizzen (eine in der YZ-Ebene, eine in der XY-Ebene
 <div style="clear:both"></div>
 <!-- 
 NewPP limit report
-Cached time: 20260116053134
+Cached time: 20260116053813
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.105 seconds
-Real time usage: 0.134 seconds
-Preprocessor visited node count: 235/1000000
+CPU time usage: 0.097 seconds
+Real time usage: 0.127 seconds
+Preprocessor visited node count: 234/1000000
 Post&#8208;expand include size: 2902/2097152 bytes
 Template argument size: 975/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 1953/5000000 bytes
+Unstrip post&#8208;expand size: 1957/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    5.838      1 -total
- 55.15%    3.220      1 Template:Macro/de
- 28.21%    1.647      1 Template:Codeextralink
- 12.40%    0.724      1 Template:Clear
+100.00%    5.783      1 -total
+ 48.07%    2.780      1 Template:Macro/de
+ 30.19%    1.746      1 Template:Codeextralink
+ 16.45%    0.951      1 Template:Clear
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:226691-0!canonical and timestamp 20260116053133 and revision id 1739044. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:226691-0!canonical and timestamp 20260116053813 and revision id 1739048. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
