--- a/wiki/it/Macro_at_Startup.html
+++ b/wiki/it/Macro_at_Startup.html
@@ -102,8 +102,9 @@ Infine, creare nella stessa cartella un file chiamato "InitGui.py" in cui inseri
 <p>Notare che viene eseguita solo una volta. Se si vuole eseguire pi&ugrave; di una macro, bisogna semplicemente aggiungere le altre nello stesso file (guardare i commenti sul codice precedente).
 </p><p>La procedura &egrave; finita. La macro dovrebbe venire eseguita automaticamente al prossimo avvio di FreeCAD.
 </p><p>Notare che se la macro originale &egrave; stata scaricata tramite Addon Manager, nel caso di aggiornamento essa viene sovrascritta e quindi &egrave; necessario eseguire di nuovo questi passaggi.
+</p><p><span id="General_Notes"></span>
 </p>
-<h2><span class="mw-headline" id="General_Notes">General Notes</span></h2>
+<h2><span class="mw-headline" id="Note_generali">Note generali</span></h2>
 <ul><li>In the example 'InitGui.py' script above, the function named 'runStartupMacros()' may be changed, so long as you also change the other four references to it, so they all match.</li>
 <li>This script will be run prior to the auto loading of your desired startup workbench in the FreeCAD Preferences, <a href="../Preferences_Editor.html#General_settings" title="Preferences Editor">General settings</a>.</li></ul>
 <h3><span class="mw-headline" id="Linux">Linux</span></h3>
@@ -136,13 +137,13 @@ Infine, creare nella stessa cartella un file chiamato "InitGui.py" in cui inseri
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260116104006
+Cached time: 20260116104020
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.039 seconds
-Real time usage: 0.073 seconds
-Preprocessor visited node count: 145/1000000
+CPU time usage: 0.038 seconds
+Real time usage: 0.043 seconds
+Preprocessor visited node count: 146/1000000
 Post&#8208;expand include size: 6521/2097152 bytes
 Template argument size: 3840/2097152 bytes
 Highest expansion depth: 5/100
@@ -152,14 +153,14 @@ Unstrip post&#8208;expand size: 6961/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   10.015      1 -total
- 56.51%    5.660      1 Template:Powerdocnavi/it
- 21.92%    2.195      3 Template:Code
- 21.74%    2.177      1 Template:Navigation_menu_2
- 16.74%    1.676      1 Template:TOCright
+100.00%    7.002      1 -total
+ 53.43%    3.741      1 Template:Powerdocnavi/it
+ 27.14%    1.900      3 Template:Code
+ 26.15%    1.831      1 Template:Navigation_menu_2
+ 14.53%    1.017      1 Template:TOCright
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:169407-0!canonical and timestamp 20260116104006 and revision id 1739062. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:169407-0!canonical and timestamp 20260116104020 and revision id 1739064. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
