--- a/wiki/it/Macro_at_Startup.html
+++ b/wiki/it/Macro_at_Startup.html
@@ -2,7 +2,7 @@
 <li><a href="../de/Macro_at_Startup.html" class="mw-pt-progress mw-pt-progress--complete" title="Makro beim Starten (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../Macro_at_Startup.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="Macro at Startup (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../fr/Macro_at_Startup.html" class="mw-pt-progress mw-pt-progress--complete" title="Ex&eacute;cuter une macro au d&eacute;marrage (100% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--med" lang="it" dir="ltr">italiano</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="it" dir="ltr">italiano</span></li>
 <li><a href="../pl/Macro_at_Startup.html" class="mw-pt-progress mw-pt-progress--low" title="Automatyczne uruchamianie makroinstrukcji. (4% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="../ru/Macro_at_Startup.html" class="mw-pt-progress mw-pt-progress--med" title="&#1057;&#1090;&#1072;&#1088;&#1090;&#1086;&#1074;&#1099;&#1081; &#1084;&#1072;&#1082;&#1088;&#1086;&#1089; (26% translated)" lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li></ul></div>
 <p><span id="Introduction"></span>
@@ -112,7 +112,9 @@ Infine, creare nella stessa cartella un file chiamato "InitGui.py" in cui inseri
 <h3><span class="mw-headline" id="Windows">Windows</span></h3>
 <ul><li>In the above example, you may place the 'MacroStartup' folder within the 'Mod' folder of your FreeCAD root directory (whether installed version or portable version), or you may create a 'Mod' folder along side the 'Macro' folder in '%USERPROFILE%\AppData\Roaming\FreeCAD\', and place the 'MacroStartup' folder there.</li>
 <li>From observation, the workbenches found within either 'Mod' folder are loaded alphabetically. Those in the FreeCAD root 'Mod' folder are loaded first, then FreeCAD scans the '%USERPROFILE%\AppData\Roaming\FreeCAD\Mod' folder for additional workbenches.</li></ul>
-<h2><span class="mw-headline" id="Related">Related</span></h2>
+<p><span id="Related"></span>
+</p>
+<h2><span class="mw-headline" id="Riferimenti">Riferimenti</span></h2>
 <ul><li><a href="../Extra_python_modules.html#LazyLoader" title="Extra python modules">LazyLoader</a> is a Python module that allows deferred loading.</li></ul>
 <p><br>
 </p>
@@ -137,30 +139,30 @@ Infine, creare nella stessa cartella un file chiamato "InitGui.py" in cui inseri
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260116104026
+Cached time: 20260116104113
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.037 seconds
-Real time usage: 0.053 seconds
-Preprocessor visited node count: 146/1000000
+CPU time usage: 0.052 seconds
+Real time usage: 0.074 seconds
+Preprocessor visited node count: 147/1000000
 Post&#8208;expand include size: 6521/2097152 bytes
 Template argument size: 3840/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 3/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 6961/5000000 bytes
+Unstrip post&#8208;expand size: 6962/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    8.844      1 -total
- 53.43%    4.725      1 Template:Powerdocnavi/it
- 26.08%    2.307      3 Template:Code
- 22.07%    1.952      1 Template:Navigation_menu_2
- 16.51%    1.460      1 Template:TOCright
+100.00%   13.230      1 -total
+ 60.41%    7.992      1 Template:Powerdocnavi/it
+ 22.48%    2.974      1 Template:Navigation_menu_2
+ 20.12%    2.662      3 Template:Code
+ 16.39%    2.168      1 Template:TOCright
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:169407-0!canonical and timestamp 20260116104026 and revision id 1739064. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:169407-0!canonical and timestamp 20260116104113 and revision id 1739068. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
