--- a/wiki/it/Macro_at_Startup.html
+++ b/wiki/it/Macro_at_Startup.html
@@ -10,15 +10,12 @@
 <h2><span class="mw-headline" id="Introduzione">Introduzione</span></h2>
 <div style="clear:right; margin-bottom: .5em; float: right; padding: .5em 0 .8em 1.4em; background: none;"><meta property="mw:PageProp/toc"></div>
 <p>Questa documentazione spiega come impostare una macro in modo che venga eseguita automaticamente all'avvio di FreeCAD.
+</p><p>Prima di iniziare, &egrave; necessario considerare quanto segue:
 </p>
-<div class="mw-translate-fuzzy">
-<p>Prima di iniziare, bisogna considerare le seguenti cose&nbsp;:
-</p>
-<ul><li>L'esecuzione automatica di macro all'avvio pu&ograve; essere considerata un rischio per la sicurezza. Si devono eseguire solo delle macro fidate e testate in precedenza.</li>
-<li>Per seguire questa procedura bisogna avere alcune nozioni di Python e di codifica.</li>
-<li>Quando si fa riferimento a delle cartelle utente ('Mod', 'Macro', ...), esse si trovano nella cartella FreeCAD dell'utente. &Egrave; possibile trovarle in Avvio e configurazione &rarr; <a href="../it/Start_up_and_Configuration.html#Informazioni_relative_all'utente" title="Start up and Configuration/it">Informazioni relative all'utente</a></li>
-<li>Questo comportamento non dovrebbe essere utilizzato per le macro che si occupano della modellazione delle parti. Questo &egrave; pi&ugrave; appropriato per le macro che aggiungono funzionalit&agrave;, migliorano l'interfaccia utente, ...</li></ul>
-</div>
+<ul><li>L'esecuzione automatica di macro all'avvio pu&ograve; essere considerata un rischio per la sicurezza. Si consiglia di eseguire solo macro affidabili e precedentemente testate.</li>
+<li>Probabilmente sono necessarie alcune nozioni di Python e di programmazione per seguire questa procedura.</li>
+<li>Quando si fa riferimento a cartelle utente ('Mod', 'Macro', ...), queste si trovano nella cartella utente di FreeCAD. &Egrave; possibile trovarle in Avvio e configurazione &rarr; <a href="../it/Start_up_and_Configuration.html#User_related_information" title="Start up and Configuration/it">Informazioni relative all'utente</a></li>
+<li>Questa operazione non dovrebbe essere eseguita per le macro che riguardano la modellazione di parti. &Egrave; invece appropriata per le macro che aggiungono funzionalit&agrave;, migliorano l'interfaccia utente, ...</li></ul>
 <p><span id="How_to"></span>
 </p>
 <h2><span class="mw-headline" id="Come_fare">Come fare</span></h2>
@@ -139,13 +136,13 @@ Infine, creare nella stessa cartella un file chiamato "InitGui.py" in cui inseri
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260116104113
+Cached time: 20260116104421
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.052 seconds
-Real time usage: 0.074 seconds
-Preprocessor visited node count: 147/1000000
+CPU time usage: 0.044 seconds
+Real time usage: 0.070 seconds
+Preprocessor visited node count: 146/1000000
 Post&#8208;expand include size: 6521/2097152 bytes
 Template argument size: 3840/2097152 bytes
 Highest expansion depth: 5/100
@@ -155,14 +152,14 @@ Unstrip post&#8208;expand size: 6962/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   13.230      1 -total
- 60.41%    7.992      1 Template:Powerdocnavi/it
- 22.48%    2.974      1 Template:Navigation_menu_2
- 20.12%    2.662      3 Template:Code
- 16.39%    2.168      1 Template:TOCright
+100.00%   13.001      1 -total
+ 43.90%    5.707      1 Template:Powerdocnavi/it
+ 27.71%    3.602      1 Template:TOCright
+ 24.47%    3.181      3 Template:Code
+ 16.16%    2.101      1 Template:Navigation_menu_2
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:169407-0!canonical and timestamp 20260116104113 and revision id 1739068. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:169407-0!canonical and timestamp 20260116104421 and revision id 1739070. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
