--- a/wiki/it/Macro_at_Startup.html
+++ b/wiki/it/Macro_at_Startup.html
@@ -112,7 +112,7 @@ Infine, creare nella stessa cartella un file chiamato "InitGui.py" in cui inseri
 <p><span id="Related"></span>
 </p>
 <h2><span class="mw-headline" id="Riferimenti">Riferimenti</span></h2>
-<ul><li><a href="../Extra_python_modules.html#LazyLoader" title="Extra python modules">LazyLoader</a> is a Python module that allows deferred loading.</li></ul>
+<ul><li><a href="../Extra_python_modules.html#LazyLoader/it" title="Extra python modules">LazyLoader</a>&egrave; un modulo Python che consente il caricamento differito.</li></ul>
 <p><br>
 </p>
 <div class="NavFrame" style="margin: 0px; text-align: center; border-collapse: collapse; font-size: 100%; border-top-style: double; border-top-style: 1px; clear:both;">
@@ -136,12 +136,12 @@ Infine, creare nella stessa cartella un file chiamato "InitGui.py" in cui inseri
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260116104434
+Cached time: 20260116104439
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.033 seconds
-Real time usage: 0.041 seconds
+CPU time usage: 0.041 seconds
+Real time usage: 0.071 seconds
 Preprocessor visited node count: 146/1000000
 Post&#8208;expand include size: 6521/2097152 bytes
 Template argument size: 3840/2097152 bytes
@@ -152,14 +152,14 @@ Unstrip post&#8208;expand size: 6962/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    7.006      1 -total
- 55.52%    3.890      1 Template:Powerdocnavi/it
- 25.92%    1.816      1 Template:Navigation_menu_2
- 25.24%    1.768      3 Template:Code
- 14.72%    1.031      1 Template:TOCright
+100.00%   10.298      1 -total
+ 53.43%    5.502      1 Template:Powerdocnavi/it
+ 26.23%    2.701      3 Template:Code
+ 22.35%    2.302      1 Template:Navigation_menu_2
+ 16.04%    1.652      1 Template:TOCright
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:169407-0!canonical and timestamp 20260116104434 and revision id 1739070. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:169407-0!canonical and timestamp 20260116104439 and revision id 1739073. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
